namespace-ingress/cross-namespace-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cross-namespace
  namespace: cross-namespace
spec:
  type: ExternalName
  externalName: blue.blue-deployment.svc.cluster.local
