namespace-ingress/main-ingress-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blue-green
  namespace: cross-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: "hello-world.info"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cross-namespace
                port:
                  number: 80
